Padding fix for main image in dark mode (#15)
* localization imp.

* blog post main image solution

blog post main image solution

* small typo on menu

* blog post changes

- move See All buttons to below on mobile
- limit 5 blog posts for mobile

* blog swiper changes

* blog design change

* fix blog post bug when translate

* padding fix

* style fixes

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -46,6 +46,10 @@
 		background-color: white !important;
 	}
 
+	.dark-mode .newsImgOverContent {
+		padding: 20px 15px 15px 15px !important;
+	}
+
 	.newsCardLg h4 {
 		font-family: var(--Noto_sans) !important;
 		font-style: normal !important;
